feat: Add developer environment setup scripts, Makefile, and comprehensive onboarding documentation.feat: Add developer environment setup scripts, Makefile, and comprehensive onboarding documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,8 @@ dist
 __pycache__
 *.pyc
 .angular
-
-# MkDocs build output
+a2ui_env_debug.txt
+*.code-workspace
+tmp/
 site/
-
-# Python virtual environment
 .venv/
