--- a/samples/client/lit/shell/package.json
+++ b/samples/client/lit/shell/package.json
@@ -79,6 +79,7 @@
   "dependencies": {
     "@a2a-js/sdk": "^0.3.4",
     "@a2ui/lit": "file:../../../../renderers/lit",
+    "@a2ui/markdown-it-lit": "file:../../../../renderers/markdown/markdown-it-lit",
     "@google/genai": "^1.22.0",
     "@lit-labs/signals": "^0.1.3",
     "@lit/context": "^1.1.4",
