--- a/samples/client/lit/contact/package.json
+++ b/samples/client/lit/contact/package.json
@@ -77,6 +77,7 @@
   "dependencies": {
     "@a2a-js/sdk": "^0.3.4",
     "@a2ui/lit": "file:../../../../renderers/lit",
+    "@a2ui/markdown-it-lit": "file:../../../../renderers/markdown-it-lit",
     "@lit-labs/signals": "^0.1.3",
     "@lit/context": "^1.1.4",
     "lit": "^3.3.1"
