--- a/samples/client/lit/package.json
+++ b/samples/client/lit/package.json
@@ -15,7 +15,7 @@
     "serve:agent:orchestrator": "cd ../../agent/adk/orchestrator && uv run .",
     "serve:shell": "cd shell && npm run dev",
     "serve:contact": "cd contact && npm run dev",
-    "build:renderer": "cd ../../../renderers/web_core && npm install && npm run build && cd ../lit && npm install && npm run build",
+    "build:renderer": "cd ../../../renderers && for dir in 'web_core' 'markdown/markdown-it-shared' 'markdown/markdown-it-lit' 'lit'; do (cd \"$dir\" && npm install && npm run build); done",
     "demo:all": "npm install && npm run build:renderer && concurrently -k -n \"SHELL,REST,CONT1\" -c \"magenta,blue,green\" \"npm run serve:shell\" \"npm run serve:agent:restaurant\" \"npm run serve:agent:contact_lookup\"",
     "demo:restaurant": "npm install && npm run build:renderer && concurrently -k -n \"SHELL,REST\" -c \"magenta,blue\" \"npm run serve:shell\" \"npm run serve:agent:restaurant\"",
     "demo:contact": "npm install && npm run build:renderer && concurrently -k -n \"SHELL,CONT1\" -c \"magenta,green\" \"npm run serve:shell\" \"npm run serve:agent:contact_lookup\"",
