--- a/renderers/markdown/markdown-it-shared/tsconfig.json
+++ b/renderers/markdown/markdown-it-shared/tsconfig.json
@@ -29,7 +29,10 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@a2ui/web_core": ["../../web_core"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.json"]
 }
