--- a/renderers/markdown/markdown-it-angular/package.json
+++ b/renderers/markdown/markdown-it-angular/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "test": "ng test --watch=false --browsers=ChromeHeadless",
     "test:watch": "ng test --browsers=ChromeHeadless",
-    "format": "prettier --write ."
+    "format": "prettier --ignore-path ../.gitignore --write .",
+    "format:check": "prettier --ignore-path ../.gitignore --check ."
   },
   "dependencies": {
     "@a2ui/markdown-it-shared": "file:../markdown-it-shared",
@@ -41,19 +42,6 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "^21.0.0",
     "prettier": "^3.8.1",
-    "tslib": "^2.8.1",
     "typescript": "~5.9.2"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
   }
 }
